plane ride home checkin

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 body, html {
+  font-family: sans-serif;
   background-color: #cc4d55;
   height: 100%;
   width: 100%;
@@ -13,6 +14,22 @@ body, html {
 
 .completed {
   text-decoration: line-through;
-  color: #adadad; }
+  color: #e4e4e4; }
+
+.incomplete {
+  text-decoration: none;
+  color: #FFFFFF; }
+
+i {
+  display: block; }
+
+.incomplete:hover {
+  cursor: pointer; }
+
+.completed:hover {
+  cursor: pointer; }
+
+#todo {
+  margin-bottom: 10px; }
 
 /*# sourceMappingURL=main.css.map */
